add verification column
